--- a/rulebooks/Trigger-DR-Drills.yaml
+++ b/rulebooks/Trigger-DR-Drills.yaml
@@ -2,7 +2,7 @@
 - name: Listen for API Calls and Trigger DR-Drills
   hosts: localhost
   sources:
-    - ansible.eda.http:
+    - ansible.eda.webhook:
         host: 0.0.0.0
         port: 5000
         endpoint: /trigger
