--- a/rulebooks/Trigger-DR-Drills.yaml
+++ b/rulebooks/Trigger-DR-Drills.yaml
@@ -8,9 +8,14 @@
         endpoint: /trigger
         method: POST
   rules:
-    - name: Trigger DR-Drills on Site Status (Up or Down)
-      condition: event.data.site_status in ["up", "down"]
+    - name: R1 - Heard "Hello!"
+      condition: event.payload.message == "Hello!"
       action:
-        run_job_template:
-          name: Primary-server-frontend-backup
-          organization: Default
+        debug:
+          msg: "You said, '{{ event.payload.message }}'. Is it me you're looking for?"
+
+    - name: R2 - Didn't hear "Hello!"
+      condition: event.payload.message is defined and event.payload.message != "Hello!"
+      action:
+        debug:
+          msg: "You said, '{{ event.payload.message }}'. Is that what you meant to say?"
